# lama_inpaint

./: .gitignore  api.py  app.py  composite_face.py  prompt.md  pyproject.toml  resize_perspectives.py  server.py  streamlit_app.py
static/: convert.js  inpaint.js  perspective.js  style.css
templates/: base.html  convert.html  home.html  inpaint.html  perspective.html
