[project]
name = "lama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "gradio>=6.0.2",
    "opencv-python>=4.11.0.86",
    "simple-lama-inpainting>=0.1.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
