[project]
name = "lama"
version = "0.1.0"
description = "Image Tools - Perspective Crop & Inpaint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "simple-lama-inpainting>=0.1.2",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
]
